# rose

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Rakefile
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg.template  linker.ld  lm_init.asm  mb_header.asm
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
