[package]
name = "rose"
version = "0.1.0"
authors = ["Tyler Levine <tyler@tylerlevine.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.1"
spin = "0.4.10"
multiboot2 = "0.3.1"
bitflags = "0.7"

[dependencies.x86]
version = "0.8.0"
default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
